--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
 
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/assets/imgs/banner1.webp" class="d-block w-100" alt="Banner 1">
+        <img src="./assets/imgs/banner1.webp" class="d-block w-100" alt="Banner 1">
       </div>
       <div class="carousel-item">
-        <img src="/assets/imgs/banner2.webp" class="d-block w-100" alt="Banner 2">
+        <img src="./assets/imgs/banner2.webp" class="d-block w-100" alt="Banner 2">
       </div>
       <div class="carousel-item">
-        <img src="/assets/imgs/banner3.webp" class="d-block w-100" alt="Banner 3">
+        <img src="./assets/imgs/banner3.webp" class="d-block w-100" alt="Banner 3">
       </div>
       <div class="carousel-item">
-        <img src="/assets/imgs/banner4.webp" class="d-block w-100" alt="Banner 4">
+        <img src="./assets/imgs/banner4.webp" class="d-block w-100" alt="Banner 4">
       </div>
       <div class="carousel-item">
-        <img src="/assets/imgs/banner5.webp" class="d-block w-100" alt="Banner 5">
+        <img src="./assets/imgs/banner5.webp" class="d-block w-100" alt="Banner 5">
       </div>
     </div>
 
@@ -202,25 +202,25 @@
 
           <!-- Items -->
           <div class="flex-shrink-0 text-center snap-center min-w-[13rem]">
-            <img src="/assets/imgs/ROZMARA.avif" alt="Rozmara"
+            <img src="./assets/imgs/ROZMARA.avif" alt="Rozmara"
               class="w-52 h-52 object-cover rounded-full border border-gray-200 shadow-sm mx-auto">
             <p class="mt-4 font-semibold text-gray-900 text-lg">Rozmara</p>
           </div>
 
           <div class="flex-shrink-0 text-center snap-center min-w-[13rem]">
-            <img src="/assets/imgs/kids.avif" alt="KK Kids"
+            <img src="./assets/imgs/kids.avif" alt="KK Kids"
               class="w-52 h-52 object-cover rounded-full border border-gray-200 shadow-sm mx-auto">
             <p class="mt-4 font-semibold text-gray-900 text-lg">KK Kids</p>
           </div>
 
           <div class="flex-shrink-0 text-center snap-center min-w-[13rem]">
-            <img src="/assets/imgs/Luxury_Pret.avif" alt="Luxury Pret"
+            <img src="./assets/imgs/Luxury_Pret.avif" alt="Luxury Pret"
               class="w-52 h-52 object-cover rounded-full border border-gray-200 shadow-sm mx-auto">
             <p class="mt-4 font-semibold text-gray-900 text-lg">Luxury Pret</p>
           </div>
 
           <div class="flex-shrink-0 text-center snap-center min-w-[13rem]">
-            <img src="/assets/imgs/KK_STUDIO.avif" alt="Accessories"
+            <img src="./assets/imgs/KK_STUDIO.avif" alt="Accessories"
               class="w-52 h-52 object-cover rounded-full border border-gray-200 shadow-sm mx-auto">
             <p class="mt-4 font-semibold text-gray-900 text-lg">Accessories</p>
           </div>
@@ -265,7 +265,7 @@
 
       <!-- 🟨 Card 1 -->
       <div class="relative group overflow-hidden rounded-xl shadow-lg">
-        <img src="/assets/imgs/Mein_aur_ami.webp" alt="MEIN AUR AMI"
+        <img src="./assets/imgs/Mein_aur_ami.webp" alt="MEIN AUR AMI"
           class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
         <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -278,7 +278,7 @@
 
       <!-- 🟥 Card 2 -->
       <div class="relative group overflow-hidden rounded-xl shadow-lg">
-        <img src="/assets/imgs/Rohani.webp" alt="ROHANI"
+        <img src="./assets/imgs/Rohani.webp" alt="ROHANI"
           class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
         <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -291,7 +291,7 @@
 
       <!-- 🩵 Card 3 -->
       <div class="relative group overflow-hidden rounded-xl shadow-lg">
-        <img src="/assets/imgs/Afsana.webp" alt="AFSANA’25"
+        <img src="./assets/imgs/Afsana.webp" alt="AFSANA’25"
           class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
         <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -315,7 +315,7 @@
 
         <!-- 🟨 Card 1 -->
         <div class="relative group overflow-hidden rounded-xl shadow-lg">
-          <img src="/assets/imgs/FESTIVE_1.webp" alt="MEIN AUR AMI"
+          <img src="./assets/imgs/FESTIVE_1.webp" alt="MEIN AUR AMI"
             class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
           <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
           <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -328,7 +328,7 @@
 
         <!-- 🟥 Card 2 -->
         <div class="relative group overflow-hidden rounded-xl shadow-lg">
-          <img src="/assets/imgs/Riwayat.webp" alt="ROHANI"
+          <img src="./assets/imgs/Riwayat.webp" alt="ROHANI"
             class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
           <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
           <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -341,7 +341,7 @@
 
         <!-- 🩵 Card 3 -->
         <div class="relative group overflow-hidden rounded-xl shadow-lg">
-          <img src="/assets/imgs/Kahani.webp" alt="AFSANA’25"
+          <img src="./assets/imgs/Kahani.webp" alt="AFSANA’25"
             class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
           <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
           <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -360,7 +360,7 @@
 <section class="w-full bg-gray-100 py-0">
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-0">
     <div class="relative">
-      <video src="assets/videos/video 1.mp4" autoplay muted loop playsinline
+      <video src="./assets/videos/video 1.mp4" autoplay muted loop playsinline
         class="w-full h-[550px] object-cover shadow-md rounded-none">
         Your browser does not support the video tag.
       </video>
@@ -392,7 +392,7 @@
       </a>
     </div>
     <div class="relative">
-      <video src="assets/videos/video 2.mp4" autoplay muted loop playsinline
+      <video src="./assets/videos/video 2.mp4" autoplay muted loop playsinline
         class="w-full h-[550px] object-cover shadow-md rounded-none">
         Your browser does not support the video tag.
       </video>
@@ -415,7 +415,7 @@
 
       <!-- 🟨 Card 1 -->
       <div class="relative group overflow-hidden rounded-xl shadow-lg">
-        <img src="/assets/imgs/Prints_1.webp" alt="MEIN AUR AMI"
+        <img src="./assets/imgs/Prints_1.webp" alt="MEIN AUR AMI"
           class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
         <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -428,7 +428,7 @@
 
       <!-- 🟥 Card 2 -->
       <div class="relative group overflow-hidden rounded-xl shadow-lg">
-        <img src="/assets/imgs/Matching_Separates_1.webp" alt="ROHANI"
+        <img src="./assets/imgs/Matching_Separates_1.webp" alt="ROHANI"
           class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
         <div class="absolute bottom-8 left-0 right-0 text-center text-white">
@@ -441,7 +441,7 @@
 
       <!-- 🩵 Card 3 -->
       <div class="relative group overflow-hidden rounded-xl shadow-lg">
-        <img src="/assets/imgs/Embroidered.webp" alt="AFSANA’25"
+        <img src="./assets/imgs/Embroidered.webp" alt="AFSANA’25"
           class="w-full h-[500px] object-cover transform group-hover:scale-105 transition duration-500">
         <div class="absolute inset-0 bg-black/40 group-hover:bg-black/50 transition duration-500"></div>
         <div class="absolute bottom-8 left-0 right-0 text-center text-white">
