--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <!-- Icons -->
       <div class="d-flex align-items-center me-3">
-        <a href="/src/pages/signin/login.html" class="text-dark me-3 fs-5"><i class="bi bi-person"></i></a>
+        <a href="./src/pages/signin/login.html" class="text-dark me-3 fs-5"><i class="bi bi-person"></i></a>
         <a href="#" class="text-dark fs-5 position-relative">
           <i class="bi bi-bag"></i>
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark">0</span>
