link paths updated for signup

--- a/src/pages/signin/login.html
+++ b/src/pages/signin/login.html
@@ -55,7 +55,7 @@
 
     <p class="text-center text-gray-700 mt-6">
       Don’t have an account? 
-      <a href="./src/pages/signin/signup" class="text-black font-semibold hover:underline">Sign up</a>
+      <a href="./signup.html" class="text-black font-semibold hover:underline">Sign up</a>
     </p>
   </div>
 </section>
