--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <ul class="navbar-nav text-uppercase fw-semibold" style="font-size: 13px; letter-spacing: 1px;">
         <li class="nav-item mx-3">
-          <a class="nav-link text-danger" href="#">Home</a>
+          <a class="nav-link text-danger" href="./index.html">Home</a>
         </li>
         <li class="nav-item mx-3">
           <a class="nav-link text-dark" href="#">New In</a>
@@ -85,7 +85,7 @@
           <a class="nav-link text-dark" href="#">Rozmara Winter Vol. I</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link text-dark" href="/src/pages/about/about.html">About</a>
+          <a class="nav-link text-dark" href="./src/pages/about/about.html">About</a>
         </li>
         <li class="nav-item mx-3">
           <a class="nav-link text-dark" href="#">Luxury Pret</a>
@@ -97,7 +97,7 @@
           <a class="nav-link text-dark" href="#">Kids</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link text-dark" href="/src/pages/contact/contact.html">Contacts</a>
+          <a class="nav-link text-dark" href="./src/pages/contact/contact.html">Contacts</a>
         </li>
       </ul>
 
