link paths updated for contact

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -42,7 +42,7 @@
 
     <!-- Icons -->
     <div class="d-flex align-items-center me-3">
-      <a href="/src/pages/signin/login.html" class="text-dark me-3 fs-5"><i class="bi bi-person"></i></a>
+      <a href="./src/pages/signin/login.html" class="text-dark me-3 fs-5"><i class="bi bi-person"></i></a>
       <a href="#" class="text-dark fs-5 position-relative">
         <i class="bi bi-bag"></i>
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark">0</span>
@@ -65,7 +65,7 @@
 
     <ul class="navbar-nav text-uppercase fw-semibold" style="font-size: 13px; letter-spacing: 1px;">
       <li class="nav-item mx-3">
-        <a class="nav-link text-danger" href="/index.html">Home</a>
+        <a class="nav-link text-danger" href="./../../../index.html">Home</a>
       </li>
       <li class="nav-item mx-3">
         <a class="nav-link text-dark" href="#">New In</a>
@@ -74,7 +74,7 @@
         <a class="nav-link text-dark" href="#">Rozmara Winter Vol. I</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link text-dark" href="/src/pages/about/about.html">About</a>
+        <a class="nav-link text-dark" href="./src/pages/about/about.html">About</a>
       </li>
       <li class="nav-item mx-3">
         <a class="nav-link text-dark" href="#">Luxury Pret</a>
@@ -86,7 +86,7 @@
         <a class="nav-link text-dark" href="#">Kids</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link text-dark" href="/src/pages/contact/contact.html">Contacts</a>
+        <a class="nav-link text-dark" href="./src/pages/contact/contact.html">Contacts</a>
       </li>
     </ul>
 
