--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -89,7 +89,7 @@
           <a class="nav-link text-dark" href="#">Kids</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link text-dark" href="/src/pages/contact/contact.html">Contacts</a>
+          <a class="nav-link text-dark" href="./src/pages/contact/contact.html">Contacts</a>
         </li>
       </ul>
 
