--- a/src/pages/signin/signup.html
+++ b/src/pages/signin/signup.html
@@ -60,7 +60,7 @@
 
       <p class="text-center text-gray-700 mt-6">
         Already have an account?
-        <a href="signin.html" class="text-black font-semibold hover:underline">Sign in</a>
+        <a href="signup.html" class="text-black font-semibold hover:underline">Sign in</a>
       </p>
     </div>
   </section>
