--- a/src/pages/signin/login.html
+++ b/src/pages/signin/login.html
@@ -1,66 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | ALZA HMZA</title>
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+      color: #222;
+    }
+    .nav-link {
+      transition: color 0.2s ease;
+    }
+    .nav-link:hover {
+      color: #000 !important;
+    }
+    .form-control:focus {
+      border-color: #000 !important;
+      box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.25);
+    }
+  </style>
 </head>
-<body>
-    
 
-<!-- Tailwind CSS CDN -->
-<script src="https://cdn.tailwindcss.com"></script>
+<body class="bg-gray-50">
 
-<section class="flex items-center justify-center min-h-screen bg-gray-50">
-  <div class="bg-white shadow-xl rounded-2xl px-8 py-10 w-full max-w-md border border-gray-100">
-
-    <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">Sign In to ALZA</h2>
-
-    <form class="space-y-6">
-      <div>
-        <label class="block text-sm font-medium text-gray-700 mb-2">Email address</label>
-        <input type="email" placeholder="you@example.com"
-               class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
-      </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-        <input type="password" placeholder="••••••••"
-               class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
-      </div>
-
-      <div class="flex items-center justify-between text-sm text-gray-600">
-        <label class="flex items-center">
-          <input type="checkbox" class="h-4 w-4 text-black border-gray-300 rounded focus:ring-black">
-          <span class="ml-2">Remember me</span>
-        </label>
-        <a href="#" class="text-black font-medium hover:underline">Forgot password?</a>
-      </div>
-
-      <button type="submit"
-              class="w-full bg-black text-white py-3 rounded-lg font-semibold hover:bg-gray-800 transition">
-        Sign In
-      </button>
-    </form>
-
-    <div class="flex items-center my-8">
-      <div class="flex-grow border-t border-gray-300"></div>
-      <span class="mx-3 text-gray-500 text-sm">or</span>
-      <div class="flex-grow border-t border-gray-300"></div>
-    </div>
-
-    <button class="w-full border border-gray-300 py-3 rounded-lg flex items-center justify-center hover:bg-gray-100 transition">
-      <i class="bi bi-google text-red-500 text-xl mr-2"></i> Continue with Google
-    </button>
-
-    <p class="text-center text-gray-700 mt-6">
-      Don’t have an account? 
-      <a href="./signup.html" class="text-black font-semibold hover:underline">Sign up</a>
-    </p>
+  <!-- 🔹 Top Offer Bar -->
+  <div class="bg-black text-white text-center py-2 text-sm">
+    🎉 Free Shipping on Orders Above Rs. 3000 | Code: <strong>ALZA20</strong>
   </div>
-</section>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <!-- 🔹 Navbar -->
+  <nav class="navbar bg-white border-bottom py-3 shadow-sm">
+    <div class="container-fluid d-flex justify-content-between align-items-center px-4">
+      <a class="navbar-brand fw-bold text-black" style="font-family: 'Times New Roman', serif; letter-spacing: 3px; font-size: 30px;">
+        ALZA&nbsp;HMZA
+      </a>
 
+      <!-- Search -->
+      <form class="d-flex position-relative" style="width: 38%;" role="search">
+        <input class="form-control rounded px-4" type="search" placeholder="Search for products..." aria-label="Search">
+        <button class="btn position-absolute border-0 bg-transparent" type="submit" style="right: 10px; top: 50%; transform: translateY(-50%);">
+          <i class="bi bi-search"></i>
+        </button>
+      </form>
+
+      <!-- Icons -->
+      <div class="d-flex align-items-center gap-3">
+        <a href="#" class="text-dark fs-5"><i class="bi bi-person"></i></a>
+        <a href="#" class="text-dark fs-5 position-relative">
+          <i class="bi bi-bag"></i>
+          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-black">0</span>
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 🔹 Secondary Navbar -->
+  <nav class="navbar navbar-expand-lg bg-white border-top border-bottom py-2">
+    <div class="container justify-content-center">
+      <ul class="navbar-nav text-uppercase fw-semibold" style="font-size: 13px; letter-spacing: 1px;">
+        <li class="nav-item mx-3"><a class="nav-link text-black" href="../../../index.html">Home</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="#">New In</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="#">Winter Vol. I</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="../about/about.html">About</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="#">Luxury Pret</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="#">RTW</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="#">Kids</a></li>
+        <li class="nav-item mx-3"><a class="nav-link text-dark" href="../contact/contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- 🔹 Breadcrumb -->
+  <div class="bg-gray-100 py-3 text-sm px-4">
+    <div class="container">
+      <a href="../../../index.html" class="text-gray-600 hover:text-black">Home</a> /
+      <span class="text-gray-800 font-semibold">Login</span>
+    </div>
+  </div>
+
+  <!-- 🔹 LOGIN SECTION (Updated: Image removed, form centered) -->
+  <section class="flex flex-col items-center justify-center min-h-screen px-6 py-12 bg-gray-50">
+    <div class="bg-white shadow-lg rounded-2xl px-8 py-10 w-full max-w-md border border-gray-100">
+      <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">Welcome Back</h2>
+
+      <form class="space-y-6">
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-2">Email Address</label>
+          <input type="email" placeholder="you@example.com"
+            class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
+        </div>
+
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+          <input type="password" placeholder="••••••••"
+            class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
+        </div>
+
+        <div class="flex items-center justify-between text-sm text-gray-600">
+          <label class="flex items-center">
+            <input type="checkbox" class="h-4 w-4 text-black border-gray-300 rounded focus:ring-black">
+            <span class="ml-2">Remember me</span>
+          </label>
+          <a href="#" class="text-black hover:underline">Forgot Password?</a>
+        </div>
+
+        <button type="submit"
+          class="w-full bg-black text-white py-3 rounded-lg font-semibold hover:bg-gray-800 transition">
+          Sign In
+        </button>
+      </form>
+
+      <div class="flex items-center my-8">
+        <div class="flex-grow border-t border-gray-300"></div>
+        <span class="mx-3 text-gray-500 text-sm">or</span>
+        <div class="flex-grow border-t border-gray-300"></div>
+      </div>
+
+      <button
+        class="w-full border border-gray-300 py-3 rounded-lg flex items-center justify-center hover:bg-gray-100 transition">
+        <i class="bi bi-google text-red-500 text-xl mr-2"></i> Continue with Google
+      </button>
+
+      <p class="text-center text-gray-700 mt-6">
+        Don’t have an account?
+        <a href="./signup.html" class="text-black font-semibold hover:underline">Sign up</a>
+      </p>
+    </div>
+  </section>
+
+  <!-- 🔹 Info Section -->
+  <section class="bg-white py-10 border-t">
+    <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+      <div>
+        <i class="bi bi-shield-lock text-3xl text-black mb-3"></i>
+        <h3 class="font-semibold text-gray-800">Secure Login</h3>
+        <p class="text-gray-500 text-sm mt-2">Your personal data is encrypted and protected.</p>
+      </div>
+      <div>
+        <i class="bi bi-heart text-3xl text-black mb-3"></i>
+        <h3 class="font-semibold text-gray-800">Personalized Experience</h3>
+        <p class="text-gray-500 text-sm mt-2">Easily track orders and manage preferences.</p>
+      </div>
+      <div>
+        <i class="bi bi-truck text-3xl text-black mb-3"></i>
+        <h3 class="font-semibold text-gray-800">Fast Checkout</h3>
+        <p class="text-gray-500 text-sm mt-2">Save details for a smooth checkout.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- 🔹 Footer -->
+  <footer class="bg-light text-muted mt-5 w-100">
+    <section class="d-flex justify-content-center p-4 border-bottom px-5">
+      <div>
+        <a href="#" class="me-4 text-reset"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="me-4 text-reset"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="me-4 text-reset"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="me-4 text-reset"><i class="fab fa-linkedin"></i></a>
+        <a href="#" class="me-4 text-reset"><i class="fab fa-github"></i></a>
+      </div>
+    </section>
+
+    <section class="px-5 py-5 text-center text-md-start">
+      <div class="row justify-content-center">
+        <div class="col-md-3 mb-4">
+          <h6 class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-2"></i>ALZA HMZA</h6>
+          <p>Elegance and premium fashion, delivered with care and confidence.</p>
+        </div>
+
+        <div class="col-md-2 mb-4">
+          <h6 class="text-uppercase fw-bold mb-4">Products</h6>
+          <p><a href="#" class="text-reset">Women</a></p>
+          <p><a href="#" class="text-reset">Men</a></p>
+          <p><a href="#" class="text-reset">Kids</a></p>
+          <p><a href="#" class="text-reset">Accessories</a></p>
+        </div>
+
+        <div class="col-md-2 mb-4">
+          <h6 class="text-uppercase fw-bold mb-4">Quick Links</h6>
+          <p><a href="#" class="text-reset">About</a></p>
+          <p><a href="#" class="text-reset">Orders</a></p>
+          <p><a href="#" class="text-reset">Help</a></p>
+          <p><a href="#" class="text-reset">Contact</a></p>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-2"></i> Karachi, Pakistan</p>
+          <p><i class="fas fa-envelope me-2"></i> info@alzahmza.com</p>
+          <p><i class="fas fa-phone me-2"></i> +92 300 1234567</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="text-center p-4 bg-light">
+      © <span id="year"></span> ALZA HMZA — All Rights Reserved
+    </div>
+  </footer>
+
+  <!-- Back to Top -->
+  <button id="backToTop" class="hidden fixed bottom-6 right-6 bg-black text-white p-3 rounded-full shadow-lg hover:bg-gray-800 transition">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    const btn = document.getElementById("backToTop");
+    window.addEventListener("scroll", () => {
+      btn.classList.toggle("hidden", window.scrollY < 300);
+    });
+    btn.addEventListener("click", () => window.scrollTo({ top: 0, behavior: "smooth" }));
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
