--- a/src/pages/signin/login.html
+++ b/src/pages/signin/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,12 +36,12 @@
 
 <body class="bg-gray-50">
 
-  <!-- 🔹 Top Offer Bar -->
+  <!-- Top Offer Bar -->
   <div class="bg-black text-white text-center py-2 text-sm">
     🎉 Free Shipping on Orders Above Rs. 3000 | Code: <strong>ALZA20</strong>
   </div>
 
-  <!-- 🔹 Navbar -->
+  <!-- Navbar -->
   <nav class="navbar bg-white border-bottom py-3 shadow-sm">
     <div class="container-fluid d-flex justify-content-between align-items-center px-4">
       <a class="navbar-brand fw-bold text-black" style="font-family: 'Times New Roman', serif; letter-spacing: 3px; font-size: 30px;">
@@ -66,7 +67,7 @@
     </div>
   </nav>
 
-  <!-- 🔹 Secondary Navbar -->
+  <!-- Secondary Navbar -->
   <nav class="navbar navbar-expand-lg bg-white border-top border-bottom py-2">
     <div class="container justify-content-center">
       <ul class="navbar-nav text-uppercase fw-semibold" style="font-size: 13px; letter-spacing: 1px;">
@@ -82,7 +83,7 @@
     </div>
   </nav>
 
-  <!-- 🔹 Breadcrumb -->
+  <!-- Breadcrumb -->
   <div class="bg-gray-100 py-3 text-sm px-4">
     <div class="container">
       <a href="../../../index.html" class="text-gray-600 hover:text-black">Home</a> /
@@ -90,27 +91,28 @@
     </div>
   </div>
 
-  <!-- 🔹 LOGIN SECTION (Updated: Image removed, form centered) -->
+  <!-- LOGIN SECTION -->
   <section class="flex flex-col items-center justify-center min-h-screen px-6 py-12 bg-gray-50">
     <div class="bg-white shadow-lg rounded-2xl px-8 py-10 w-full max-w-md border border-gray-100">
       <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">Welcome Back</h2>
 
-      <form class="space-y-6">
+      <!-- Formspree Login Form -->
+      <form class="space-y-6" action="https://formspree.io/f/myznqzpg" method="POST">
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-2">Email Address</label>
-          <input type="email" placeholder="you@example.com"
+          <input type="email" name="email" placeholder="you@example.com" required
             class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
         </div>
 
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-          <input type="password" placeholder="••••••••"
+          <input type="password" name="password" placeholder="••••••••" required
             class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
         </div>
 
         <div class="flex items-center justify-between text-sm text-gray-600">
           <label class="flex items-center">
-            <input type="checkbox" class="h-4 w-4 text-black border-gray-300 rounded focus:ring-black">
+            <input type="checkbox" name="remember" class="h-4 w-4 text-black border-gray-300 rounded focus:ring-black">
             <span class="ml-2">Remember me</span>
           </label>
           <a href="#" class="text-black hover:underline">Forgot Password?</a>
@@ -140,28 +142,7 @@
     </div>
   </section>
 
-  <!-- 🔹 Info Section -->
-  <section class="bg-white py-10 border-t">
-    <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-      <div>
-        <i class="bi bi-shield-lock text-3xl text-black mb-3"></i>
-        <h3 class="font-semibold text-gray-800">Secure Login</h3>
-        <p class="text-gray-500 text-sm mt-2">Your personal data is encrypted and protected.</p>
-      </div>
-      <div>
-        <i class="bi bi-heart text-3xl text-black mb-3"></i>
-        <h3 class="font-semibold text-gray-800">Personalized Experience</h3>
-        <p class="text-gray-500 text-sm mt-2">Easily track orders and manage preferences.</p>
-      </div>
-      <div>
-        <i class="bi bi-truck text-3xl text-black mb-3"></i>
-        <h3 class="font-semibold text-gray-800">Fast Checkout</h3>
-        <p class="text-gray-500 text-sm mt-2">Save details for a smooth checkout.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- 🔹 Footer -->
+  <!-- Footer -->
   <footer class="bg-light text-muted mt-5 w-100">
     <section class="d-flex justify-content-center p-4 border-bottom px-5">
       <div>
@@ -210,21 +191,11 @@
     </div>
   </footer>
 
-  <!-- Back to Top -->
-  <button id="backToTop" class="hidden fixed bottom-6 right-6 bg-black text-white p-3 rounded-full shadow-lg hover:bg-gray-800 transition">
-    <i class="bi bi-arrow-up"></i>
-  </button>
-
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
-
-    const btn = document.getElementById("backToTop");
-    window.addEventListener("scroll", () => {
-      btn.classList.toggle("hidden", window.scrollY < 300);
-    });
-    btn.addEventListener("click", () => window.scrollTo({ top: 0, behavior: "smooth" }));
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
