--- a/src/pages/signin/signup.html
+++ b/src/pages/signin/signup.html
@@ -83,25 +83,26 @@
     <div class="bg-white shadow-lg rounded-2xl px-8 py-10 w-full max-w-md border border-gray-100">
       <h2 class="text-3xl font-bold text-center text-gray-900 mb-8">Create Your ALZA Account</h2>
 
-      <form class="space-y-6">
+      <!-- 🔹 Formspree Form -->
+      <form action="https://formspree.io/f/myznqzpg" method="POST" class="space-y-6">
         <!-- Full Name -->
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-2">Full Name</label>
-          <input type="text" placeholder="Your full name"
+          <input type="text" name="name" placeholder="Your full name" required
             class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
         </div>
 
         <!-- Email -->
         <div>
           <label class="block text-sm font-medium text-gray-700 mb-2">Email Address</label>
-          <input type="email" placeholder="you@example.com"
+          <input type="email" name="email" placeholder="you@example.com" required
             class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
         </div>
 
         <!-- Password -->
         <div class="relative">
           <label class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-          <input id="password" type="password" placeholder="••••••••"
+          <input id="password" type="password" name="password" placeholder="••••••••" required
             class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
           <i class="bi bi-eye-slash absolute right-3 top-1/2 transform -translate-y-1/2 cursor-pointer text-gray-500" onclick="togglePassword()"></i>
         </div>
@@ -109,14 +110,14 @@
         <!-- Confirm Password -->
         <div class="relative">
           <label class="block text-sm font-medium text-gray-700 mb-2">Confirm Password</label>
-          <input id="confirmPassword" type="password" placeholder="••••••••"
+          <input id="confirmPassword" type="password" name="confirmPassword" placeholder="••••••••" required
             class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-black">
           <i class="bi bi-eye-slash absolute right-3 top-1/2 transform -translate-y-1/2 cursor-pointer text-gray-500" onclick="toggleConfirmPassword()"></i>
         </div>
 
         <!-- Terms & Conditions -->
         <div class="flex items-center text-sm text-gray-600">
-          <input type="checkbox" class="h-4 w-4 text-black border-gray-300 rounded focus:ring-black">
+          <input type="checkbox" name="terms" required class="h-4 w-4 text-black border-gray-300 rounded focus:ring-black">
           <span class="ml-2">I agree to the <a href="#" class="text-black font-semibold hover:underline">Terms & Conditions</a></span>
         </div>
 
